--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 alembic==1.18.4
+annotated-types==0.7.0
+anyio==4.12.1
 blinker==1.9.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
 Flask==3.1.2
@@ -8,14 +12,25 @@ Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 greenlet==3.3.1
 gunicorn==25.1.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.3
 packaging==26.0
+pillow==12.1.1
 psycopg2-binary==2.9.11
+pydantic==2.12.5
+pydantic_core==2.41.5
 python-dotenv==1.2.1
+reportlab==4.4.10
+sarvamai==0.1.25
 SQLAlchemy==2.0.46
+typing-inspection==0.4.2
 typing_extensions==4.15.0
+websockets==16.0
 Werkzeug==3.1.5
 WTForms==3.2.1
