--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,8 @@ celerybeat.pid
 
 # Environments
 .env
+.env.*
+!.env.example
 .envrc
 .venv
 env/
@@ -143,6 +145,12 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Private keys and secrets
+*.pem
+*.key
+*.p12
+secrets.json
 
 # Spyder project settings
 .spyderproject
